typescript/checker/tests/conformance/es6/Symbols/symbolProperty10.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            120,
        ),
        hi: BytePos(
            121,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty10.ts:9:5
  |
9 | var i: I;
  |     ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            135,
        ),
        hi: BytePos(
            136,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolProperty10.ts:10:9
   |
10 | i = new C;
   |         ^

error: unimplemented
expand_export_info(C)
File: $DIR/tests/conformance/es6/Symbols/symbolProperty10.ts
  --> $DIR/tests/conformance/es6/Symbols/symbolProperty10.ts:11:12
   |
11 | var c: C = i;
   |            ^

